[gd_scene load_steps=13 format=2]

[ext_resource path="res://ressources/Asteroids/2.png" type="Texture" id=1]
[ext_resource path="res://ressources/Asteroids/3.png" type="Texture" id=2]
[ext_resource path="res://ressources/Asteroids/1.png" type="Texture" id=3]
[ext_resource path="res://scenes/scripts/Asteroid.gd" type="Script" id=4]
[ext_resource path="res://ressources/Asteroids/asteroid_destruction/destruction1.png" type="Texture" id=5]
[ext_resource path="res://ressources/Asteroids/asteroid_destruction/destruction3.png" type="Texture" id=6]
[ext_resource path="res://ressources/Asteroids/asteroid_destruction/destruction4.png" type="Texture" id=7]
[ext_resource path="res://ressources/Asteroids/asteroid_destruction/destruction5.png" type="Texture" id=8]
[ext_resource path="res://ressources/Asteroids/asteroid_destruction/destruction2.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "destroy",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 15.0786

[sub_resource type="CircleShape2D" id=3]
radius = 20.2284

[node name="Asteroid" type="KinematicBody2D" groups=[
"asteroid",
"partDamager",
]]
z_index = 3
z_as_relative = false
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "1"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"asteroid",
"damageableByPlayer",
"partDamager",
]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Area2D_body_entered"]
